fix: Image width on homepage
The image on the homepage should be wide enough to get address on one
line.
It should also shrink when the screen is too narrow.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -325,9 +325,13 @@
     vertical-align: top;
 
     background-color: $grey-color-light;
-    width: 200px;
+    width: 900px;
     padding: 5px;
     margin: 0px 10px 20px;
+
+    @include media-query($on-palm) {
+        max-width: 200px;
+    }
 }
 
 .home-picture {
